updated html and css

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <section id="stats">
         <h2>Results:</h2>
         <span id="correct"></span>
-        <span id="wrong"></span>
-        <span id="unanswered"></span>
+        Enter initials:
+        <input type="text">
+        <button id="init-btn">Enter</button>
     </section>
     <div id="answer-div">
         <span id="answer"></span>
