added the rest of the js functionality, html, and css

--- a/index.html
+++ b/index.html
@@ -26,14 +26,24 @@
     <section id="stats">
         <h2>Results:</h2>
         <span id="correct"></span>
-        Enter initials:
-        <input type="text">
-        <button id="init-btn">Enter</button>
+        <form id="initials">
+            Enter initials:
+            <input id="init-input" type="text">
+            <button id="init-btn">Enter</button>
+        </form>
+    </section>
+    <section id="highscores">
+        <h1>Highscores</h1>
+        <div id="scores"></div>
+        <button id="goBack">Go Back</button>
+        <button id="clearHighscores">Clear Highscores</button>
     </section>
     <div id="answer-div">
         <span id="answer"></span>
     </div>
-
+    <footer>
+        Coding Quiz
+    </footer>
     <script src="./Assets/js/script.js"></script>
 </body>
 
